@@ -1,5 +1,5 @@
 # OASIS_START
-# DO NOT EDIT (digest: 0d9f7d295985c7183dc3c1de7151f40f)
+# DO NOT EDIT (digest: 66528e2e932534e1f0a80d505a7f7286)
 # Library extunix
 "src": include
 <src/*.ml{,i}>: oasis_library_extunix_ccopt
@@ -26,6 +26,7 @@
 "src/endian.c": oasis_library_extunix_ccopt
 "src/read_cred.c": oasis_library_extunix_ccopt
 "src/fexecve.c": oasis_library_extunix_ccopt
+"src/sendmsg.c": oasis_library_extunix_ccopt
 <src/extunix.{cma,cmxa}>: use_libextunix
 <src/*.ml{,i}>: pkg_unix
 <src/*.ml{,i}>: pkg_bigarray
@@ -75,6 +76,8 @@
 "src/read_cred.c": pkg_bigarray
 "src/fexecve.c": pkg_unix
 "src/fexecve.c": pkg_bigarray
+"src/sendmsg.c": pkg_unix
+"src/sendmsg.c": pkg_bigarray
 # Executable test
 <test/test.{native,byte}>: use_extunix
 <test/test.{native,byte}>: pkg_unix
