@@ -1,7 +1,7 @@
 (* setup.ml generated for the first time by OASIS v0.2.0~alpha1 *)
 
 (* OASIS_START *)
-(* DO NOT EDIT (digest: 5f29ab2ff6ed97c2d3d4b9badacae2ce) *)
+(* DO NOT EDIT (digest: e777a3442d4e5ee04d0fad5d62300bf1) *)
 (*
    Regenerated by OASIS v0.2.0
    Visit http://oasis.forge.ocamlcore.org for more information and
@@ -5264,7 +5264,8 @@ let setup_t =
                            "malloc.c";
                            "endian.c";
                            "read_cred.c";
-                           "fexecve.c"
+                           "fexecve.c";
+                           "sendmsg.c"
                         ];
                       bs_data_files = [];
                       bs_ccopt =
