@@ -255,5 +255,6 @@ let () =
 		 D"htobe64"; D"htole64"; D"be64toh"; D"le64toh"; ];
     "READ_CREDENTIALS", L[ I"sys/types.h"; I"sys/socket.h"; D"SO_PEERCRED"; ];
     "FEXECVE", L[ I "unistd.h"; S"fexecve"; ];
+    "SENDMSG", L[ I"sys/types.h"; I"sys/socket.h"; S"sendmsg"; S"recvmsg" ];
   ]
 
