@@ -1088,6 +1088,31 @@ external fexecve: Unix.file_descr -> string array -> string array -> 'a = "caml_
 
   END
 
+HAVE SENDMSG
+
+(** {2 sendmsg / readmsg }
+
+    {b Author:} Andre Nathan *)
+
+(** Send a message and optionally a file descriptor through a socket. Passing
+    file descriptors requires UNIX domain sockets. *)
+external sendmsg: Unix.file_descr -> ?sendfd:Unix.file_descr -> string -> unit = "caml_extunix_sendmsg"
+
+(** Send a message and possibly a file descriptor from a socket.  *)
+external recvmsg: Unix.file_descr -> (Unix.file_descr option) * string = "caml_extunix_recvmsg"
+
+(** Send a file descriptor through a UNIX domain socket. *)
+let sendfd conn_fd fd_to_send =
+  sendmsg conn_fd ~sendfd:fd_to_send ""
+
+(** Receive a file descriptor sent through a UNIX domain socket. *)
+let recvfd fd =
+  match recvmsg fd with
+  | Some recvfd, "" -> recvfd
+  | _ -> raise (Unix.Unix_error (Unix.EINVAL, "recvfd", "no descriptor"))
+
+END
+
 (* NB Should be after all 'external' definitions *)
 
 (** {2 Meta} *)
