@@ -7,6 +7,7 @@
   * posix_memalign
   * read_credentials
   * fexecve
+  * sendmsg / readmsg
 * New submodules: EndianBig, EndianLittle, EndianNet, EndianHost
   * New bindings
     * uint16_from_host uint16_to_host
